# ada-loom-registry

./: .editorconfig  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .guix-channel  .tool-versions  AI_USAGE.adoc  CHANGELOG.md  CITATION.cff  CI_CD.adoc  CONTRIBUTING.adoc  ECOSYSTEM.scm  IDENTITY.adoc  LICENSE  LICENSE-PALIMPSEST.txt  LICENSE.txt  META.scm  ONBOARDING.adoc  PRIVACY.adoc  PROJECT_STATUS.adoc  README.adoc  README.md  REVERSIBILITY.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.adoc  STATE.scm  TESTING.adoc  WASM_STATUS.adoc  cabal.project  codemeta.json  config.ncl  config.toml  cookbook.adoc  guix.scm  justfile  spindle.cabal
.github/workflows/: codeql.yml  comprehensive-quality.yml  haskell.yml  quality.yml  security-policy.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.rhodium/: LEVEL  WAIVER.adoc  compliance.json
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
app/: Main.hs
config/: build.ncl  ci.ncl  deploy.ncl  dev.ncl
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: CITATIONS.adoc
docs/adr/: 0001-adopt-rhodium-standard.adoc  0002-nickel-parser-integration.adoc  STATUS.adoc
src/: Spindle.hs
src/Spindle/: Registry.hs
